# fast10k

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REFACTOR_COMPARISON.md
src/: cli.rs  config.rs  edinet_indexer.rs  indexer.rs  lib.rs  main.rs  models.rs  storage.rs  tui.rs
src/downloader/: edgar.rs  edinet.rs  mod.rs  tdnet.rs
src/edinet/: downloader.rs  errors.rs  indexer.rs  mod.rs  reader.rs  types.rs
src/edinet_tui/: app.rs  events.rs  handlers.rs  mod.rs  traits.rs  ui.rs
src/edinet_tui/components/: base_screen.rs  document_table.rs  form_field.rs  list_view.rs  mod.rs  status_display.rs
src/edinet_tui/operations/: content_loader.rs  database_manager.rs  download_manager.rs  mod.rs
src/edinet_tui/screens/: database.rs  help.rs  main_menu.rs  main_menu_refactored.rs  mod.rs  results.rs  search.rs  viewer.rs
static/: EdinetcodeDlInfo.csv
tasks/: 1-edinet-initial.md  2-comprehensive-refactoring.md  3-edinet-tui-implementation.md  4-edinet-tui-architecture-explanation.md
